# piar-digital-app

./: .eslintrc.json  .gitignore  Dockerfile  PROVENANCE.md  README.md  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  desktop-build.yml  release.yml
.signpath/: README.md
docker/: headers.conf  stack.yml
docs/: README.md  architecture.md  code-signing-policy.md  contributing.md  data-model.md  pdf-docx-roundtrip.md  persistence-and-encryption.md  release.md  security.md  testing.md
public/: new_template.docx  sw.js
scripts/: build-msix.mjs  check-bundle-size.mjs  generate-csp-headers.mjs  run-desktop-web-build.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: configured-docx-template.ts  globals.css  layout.tsx  manifest.ts  metadata-base.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/embedded/: PiarDigitalApp.tsx
src/types/: assets.d.ts  tauri-runtime.d.ts
tests/a11y/: axe-setup.ts  section-accessibility.test.tsx
tests/app/: landing-flow.smoke.test.tsx  metadata-base.test.ts  (+1 more)
wiki/: Como-usar-la-aplicacion.md  Despliegue-para-instituciones.md  Home.md  Preguntas-frecuentes.md  Privacidad-y-seguridad.md  Que-es-PIAR.md  README.md  Reportar-un-problema.md  _Sidebar.md
(+188 files in other folders)
