[package]
name = "piar_digital_offline"
version = "0.1.5"
description = "Offline desktop packaging for PIAR Digital"
authors = ["PIAR Digital"]
license = "GPL-3.0-or-later"
repository = "https://github.com/JoseStud/piar-digital-app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "piar_digital_offline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
rfd = "0.15"
tauri = { version = "2.10.3" }
